non disappearing monsters

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,13 @@
 		<li> <%= scores[i].username %> ----- <%= scores[i].bestScore %></li>
 	<%}%>
 	</ul>
+
+	<p>
+		SPACE == hit enemy in motion direction
+	</p>
+	<p>
+		Up, Down, Left, Right keys == to move around
+	</p>
 </div>
 
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
